<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#000D46">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp">
        <ImageView
                android:id="@+id/btn_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_back"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"/>
        <TextView
                android:id="@+id/btn_save"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:background="@drawable/btn_bkg"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="Save"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
    </RelativeLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="45dp"
            android:background="#26006CFF">
        <LinearLayout
                android:layout_width="364dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp">
                <TextView
                    android:id="@+id/shelf_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#00FFDF"
                    android:text="Shelf"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/shelf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/shelf_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|right"
                    android:background="@android:color/transparent"
                    android:textCursorDrawable="@null"
                    android:cursorVisible="true"
                    android:maxLength="18"
                    android:hint="@string/shelf"
                    android:textColorHint="#C9C9C9"/>

            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#26FFFFFF"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp">
                <TextView
                    android:id="@+id/room_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#00FFDF"
                    android:text="Room"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/room"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/room_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|right"
                    android:background="@android:color/transparent"
                    android:textCursorDrawable="@null"
                    android:cursorVisible="true"
                    android:maxLength="18"
                    android:hint="@string/room"
                    android:textColorHint="#C9C9C9"/>

            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#26FFFFFF"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">
                <TextView
                    android:id="@+id/domain_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#00FFDF"
                    android:text="Socket Domain Name"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/socketDomainName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/domain_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|right"
                    android:background="@android:color/transparent"
                    android:textCursorDrawable="@null"
                    android:cursorVisible="true"
                    android:hint="@string/socket_name"
                    android:textColorHint="#C9C9C9"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#26FFFFFF"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">
                <TextView
                    android:id="@+id/port_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#00FFDF"
                    android:text="Socket Port"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/socketPort"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/port_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|right"
                    android:background="@android:color/transparent"
                    android:textCursorDrawable="@null"
                    android:cursorVisible="true"
                    android:hint="@string/socket_port"
                    android:textColorHint="#C9C9C9"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#26FFFFFF"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">
                <TextView
                    android:id="@+id/service_domain_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#00FFDF"
                    android:text="Service Domain Name"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/serviceDomainName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/service_domain_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|right"
                    android:background="@android:color/transparent"
                    android:textCursorDrawable="@null"
                    android:cursorVisible="true"
                    android:hint="@string/api_domain_name"
                    android:textColorHint="#C9C9C9"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#26FFFFFF"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">
                <TextView
                    android:id="@+id/api_port_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#00FFDF"
                    android:text="Service Port"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/servicePort"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/api_port_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|right"
                    android:background="@android:color/transparent"
                    android:textCursorDrawable="@null"
                    android:cursorVisible="true"
                    android:hint="@string/api_port"
                    android:textColorHint="#C9C9C9"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#26FFFFFF"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">
                <TextView
                    android:id="@+id/face_activation_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#00FFDF"
                    android:text="Face Activation Code"
                    android:layout_centerVertical="true"/>
                <EditText
                    android:id="@+id/activation_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/face_activation_code"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|right"
                    android:background="@android:color/transparent"
                    android:textCursorDrawable="@null"
                    android:cursorVisible="true"
                    android:hint="Activation Code"
                    android:textColorHint="#C9C9C9"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#26FFFFFF"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>